test/files/neg/t2388.scala
class Foo {
  val searchField = new AnyRef { search() }
  def search() = searchField
}
