test/files/neg/t2388.check
t2388.scala:2: error: recursive method search needs result type
  val searchField = new AnyRef { search() }
                                 ^
one error found
